agrega servicio de sitios web basico

--- a/productos.html
+++ b/productos.html
@@ -109,49 +109,59 @@
                 </div>
 
                 <div class="mb-5">
-                    <p>Sadipscing labore amet rebum est et justo gubergren. Et eirmod ipsum sit diam ut magna lorem.
-                        Nonumy vero labore lorem sanctus rebum et lorem magna kasd, stet amet magna accusam consetetur
-                        eirmod. Kasd accusam sit ipsum sadipscing
-                        et at at sanctus et. Ipsum sit gubergren dolores et, consetetur justo invidunt at et aliquyam ut
-                        et vero clita. Diam sea sea no sed dolores diam nonumy, gubergren sit stet no diam kasd vero.
+
+                    <p>Un sitio web es esencial para que las empresas se expandan a nuevos mercados. Si bien algunas
+                        ideas requieren de grandes sitios web con manejo de altos flujos de visitas y transacciones, en
+                        Nogo Digital sabemos que no todas las ideas inician o necesitan lo mismo. Es por esto que
+                        ofrecemos la creación de sitios web básicos, que permiten a las empresas dar a conocer sus
+                        ideas, productos e información relevante a través de la internet.
+
                     </p>
-                    <p>Voluptua est takimata stet invidunt sed rebum nonumy stet, clita aliquyam dolores vero stet
-                        consetetur elitr takimata rebum sanctus. Sit sed accusam stet sit nonumy kasd diam dolores,
-                        sanctus lorem kasd duo dolor dolor vero sit et.
-                        Labore ipsum duo sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et, clita lorem
-                        sit vero amet amet est dolor elitr, stet et no diam sit. Dolor erat justo dolore sit invidunt.
+                    <p>
+                        Una web básica, te permite tener contenido estático, que no requiere actualizaciones constantes.
+                        Es una opción económica para aquellos que buscan una presencia en línea sin realizar grandes
+                        inversiones y su objetivo principal es darse a conocer de forma rápida.
+
                     </p>
                     <h2 class="mb-4">Conoce más sobre las herramientas</h2>
                     <img class="img-fluid w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est
-                        sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum
-                        eos. Clita no magna no dolor erat diam
-                        tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam
-                        kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing
-                        rebum sit amet ut ut, voluptua diam
-                        dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam
-                        dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos.
-                        Accusam eirmod kasd lorem clita sanctus
-                        ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat
-                        aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem
-                        dolore, elitr aliquyam takimata sea kasd
-                        dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.
-                        Rebum voluptua magna eos magna, justo gubergren labore sit voluptua eos.</p>
+                    <p>Para tener un sitio web en internet, se requiere un conjunto de habilidades y tecnologías que
+                        permitan hacerlo accesible desde la web. Esto incluye servicios y herramientas como los DNS,
+                        nombres de dominio, un servidor web entre otros.
+                    </p>
+                    <p></p>
+                    <h4 class="mb-4 text-break">¿Qué es un nombre de dominio? </h4>
+                    <p>Es la forma en que tu sitio web será conocido en Internet. Cada sitio web tiene una dirección IP,
+                        que es un número que lo identifica. Por ejemplo, una dirección IP podría lucir como
+                        192.185.082.250. Sin embargo, esta forma de identificación es difícil de recordar para tus
+                        visitantes potenciales. Es por eso que el nombre de dominio le da un alias a la dirección IP de
+                        tu sitio, lo que permite que tus posibles clientes te busquen con el nombre de tu empresa. Por
+                        ejemplo, www.tuempresa.co es un nombre de dominio fácil de recordar que te permite tener
+                        presencia en línea y conectarte con tus clientes de manera efectiva.
+                    </p>
+                    <h4>
+                        ¿Qué es un DNS?
+
+                    </h4>
+                    <p>Una vez que tienes tu nombre de dominio, es importante que la red de internet pueda encontrar tu
+                        sitio web. Es aquí donde entran en juego los Servidores de Nombres de Dominio (DNS), los cuales
+                        funcionan como un mapa que indica la ubicación de tu sitio web, permitiendo que sea accesible
+                        para los usuarios de internet en todo el mundo.
+                    </p>
+                    <h4>¿Qué es un servidor web?
+                    </h4>
+                    <p>Un servidor web es el lugar en donde se almacena toda la información que deseas mostrar en
+                        internet. Es el espacio donde estarán disponibles tus productos, imágenes, reseñas, artículos,
+                        comentarios y todo lo que quieras mostrarle al mundo por medio de tu sitio web.
+                    </p>
                     <h3 class="mb-4">Nuestra propuesta</h3>
                     <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/blog-2.jpg" alt="Image">
-                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est
-                        sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum
-                        eos. Clita no magna no dolor erat diam
-                        tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam
-                        kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing
-                        rebum sit amet ut ut, voluptua diam
-                        dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam
-                        dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos.
-                        Accusam eirmod kasd lorem clita sanctus
-                        ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat
-                        aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem
-                        dolore, elitr aliquyam takimata sea kasd
-                        dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.
+                    <p>En Noho Digital, entendemos que el costo puede ser un factor importante a la hora de crear un
+                        sitio web. Por eso, ofrecemos sitios web básicos que utilizan herramientas de bajo costo que
+                        permitan minimizar los gastos de mantenimiento. Trabajamos contigo para crear un sitio web
+                        funcional que se adapte a las necesidades de tu empresa o idea de negocio. Además, nuestros
+                        precios son muy accesibles, comenzando desde los $800.000 (COP)
+
                     </p>
                 </div>
 
@@ -210,7 +220,7 @@
                                     Sitios Web podemos ofrecerte el sitio que se ajuste a tu medida, desde sitios
                                     básicos hasta soluciones que te permitan tener un mayor control y personalización.
                                     <a class="read-more-link" href="#">Saber más...</a>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -227,7 +237,7 @@
                                 <div class="accordion-body">¿Necesitas un software o programa que te ayude en tu
                                     negocio? Con nuestras soluciones de software a la medida ofrecemos entornos que
                                     permite apoyar tu empresa usando tecnologías que nos permiten ofrecer software
-                                    multiplataforma y completamente ajustado a tus necesidades. 
+                                    multiplataforma y completamente ajustado a tus necesidades.
                                     <a class="read-more-link" href="#">Saber más...</a>
                                 </div>
                             </div>
@@ -244,7 +254,7 @@
                                 data-bs-parent="#accordionFlushExample">
                                 <div class="accordion-body">Desde Nogo Digital creamos aplicaciones móviles que
                                     funcionan en la web, en la Play Store y en Apple Store, permitiendo tener
-                                    aplicaciones multiplataforma ajustadas a tus necesidades. 
+                                    aplicaciones multiplataforma ajustadas a tus necesidades.
                                     <a class="read-more-link" href="#">Saber más...</a>
                                 </div>
                             </div>
