--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="#pointtoabout" class="nav-item nav-link">Sobre nosotros</a>
                         <a href="#pointtoservices" class="nav-item nav-link">Servicios</a>
+                        <a href="https://noho.digital/productos" class="nav-item nav-link">Productos</a>
                         <a href="http://blog.noho.digital/" class="nav-item nav-link" target="_blank">Blog</a>
                         <a href="#pricing" class="nav-item nav-link d-none">Precios</a>
                         <div class="d-none nav-item dropdown">
@@ -192,7 +193,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="pointtoservices"></div>
+                
             </div>
         </div>
     </div>
@@ -311,14 +312,17 @@
                         </div>
                     </div>
                 </div>
+           
             </div>
         </div>
+        <div id="pointtoservices"></div>
     </div>
+ 
     <!-- values End -->
 
     <hr class="hr-separate">
     </hr>
-
+   
     <!-- Services Start -->
     <div class="container-fluid pt-5 pb-3">
         <div class="container">
