agrega link productos a pie de pagina

--- a/index.html
+++ b/index.html
@@ -844,6 +844,8 @@
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Sobre nosotros</a>
                     <a class="text-white mb-2" href="#pointtoservices"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Servicios</a>
+                            <a class="text-white mb-2" href="https://noho.digital/productos"><i
+                                class="fa fa-angle-right text-primary-highlight mr-2"></i>Productos</a>
                     <a class="text-white mb-2 d-none" href="#pricing"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Precios</a>
                     <a class="text-white d-none" href="#"><i
