--- a/productos.html
+++ b/productos.html
@@ -100,7 +100,7 @@
                 </div>
 
             </div>
-           
+
         </div>
     </div>
     <!-- Carousel End -->
@@ -119,7 +119,7 @@
 
                     <h2 class="font-weight-bold">Sitios web básicos que te permiten llegar al mundo</h2>
                 </div>
-                
+
                 <div class="mb-5">
 
                     <p>Un sitio web es esencial para que las empresas se expandan a nuevos mercados. Si bien algunas
@@ -231,7 +231,7 @@
                                     aquello que tiene para ofrecer y llegar a más lugares. Con nuestras soluciones para
                                     Sitios Web podemos ofrecerte el sitio que se ajuste a tu medida, desde sitios
                                     básicos hasta soluciones que te permitan tener un mayor control y personalización.
-                                    <a href="#pointbasicweb"><span class="read-more-link" >¡Estás aquí!</span></a>
+                                    <a href="#pointbasicweb"><span class="read-more-link">¡Estás aquí!</span></a>
 
                                 </div>
                             </div>
@@ -250,7 +250,8 @@
                                     negocio? Con nuestras soluciones de software a la medida ofrecemos entornos que
                                     permite apoyar tu empresa usando tecnologías que nos permiten ofrecer software
                                     multiplataforma y completamente ajustado a tus necesidades.
-                                    <a href="https://noho.digital/contact"><span class="read-more-link" >Saber más...</span></a>
+                                    <a href="https://noho.digital/contact"><span class="read-more-link">Saber
+                                            más...</span></a>
                                 </div>
                             </div>
                         </div>
@@ -267,7 +268,8 @@
                                 <div class="accordion-body">Desde Nogo Digital creamos aplicaciones móviles que
                                     funcionan en la web, en la Play Store y en Apple Store, permitiendo tener
                                     aplicaciones multiplataforma ajustadas a tus necesidades.
-                                    <a href="https://noho.digital/contact"><span class="read-more-link" >Saber más...</span></a>
+                                    <a href="https://noho.digital/contact"><span class="read-more-link">Saber
+                                            más...</span></a>
                                 </div>
                             </div>
                         </div>
@@ -336,6 +338,8 @@
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Sobre nosotros</a>
                     <a class="text-white mb-2" href="https://noho.digital#pointtoservices"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Servicios</a>
+                    <a class="text-white mb-2" href="https://noho.digital/productos"><i
+                            class="fa fa-angle-right text-primary-highlight mr-2"></i>Productos</a>
                     <a class="text-white mb-2 d-none" href="#pricing"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Precios</a>
                     <a class="text-white d-none" href="#"><i
