actualizar palabra "Noho"

--- a/productos.html
+++ b/productos.html
@@ -124,7 +124,7 @@
 
                     <p>Un sitio web es esencial para que las empresas se expandan a nuevos mercados. Si bien algunas
                         ideas requieren de grandes sitios web con manejo de altos flujos de visitas y transacciones, en
-                        Nogo Digital sabemos que no todas las ideas inician o necesitan lo mismo. Es por esto que
+                        Noho Digital sabemos que no todas las ideas inician o necesitan lo mismo. Es por esto que
                         ofrecemos la creación de sitios web básicos, que permiten a las empresas dar a conocer sus
                         ideas, productos e información relevante a través de la internet.
 
@@ -265,7 +265,7 @@
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Desde Nogo Digital creamos aplicaciones móviles que
+                                <div class="accordion-body">Desde Noho Digital creamos aplicaciones móviles que
                                     funcionan en la web, en la Play Store y en Apple Store, permitiendo tener
                                     aplicaciones multiplataforma ajustadas a tus necesidades.
                                     <a href="https://noho.digital/contact"><span class="read-more-link">Saber
