actualizar imagenes en la págian productos

--- a/productos.html
+++ b/productos.html
@@ -85,7 +85,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="img-fluid" src="img/producto1.jpg" alt="Image" />
+                    <img class="img-fluid" src="img/pexels-pixabay-4158.jpg.png" alt="Image" />
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px">
                             <h5 class="d-none text-white text-uppercase mb-md-3">
@@ -112,8 +112,7 @@
             <!-- Blog Detail Start -->
             <div class="col-lg-8">
                 <div class="position-relative">
-                    <img class="img-fluid w-100" src="img/blog-1.jpg" alt="">
-
+                    <img class="img-fluid w-100" src="img/blog-1.jpg" alt="" title="Imagen de rawpixel.com en Freepik: https://www.freepik.es/foto-gratis/diseno-web-online_11428417.htm#query=sitio%20web&position=11&from_view=search&track=robertav1_2_sidr">
                 </div>
                 <div class="pt-4 pb-2">
 
@@ -136,7 +135,10 @@
 
                     </p>
                     <h2 class="mb-4">Conoce más sobre las herramientas</h2>
-                    <img class="img-fluid w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
+                    <div>
+
+                        <img class="img-fluid w-50 float-left mr-4 mb-3" src="img/blog-2.jpg" alt="Image" title="Foto de Christina Morillo: https://www.pexels.com/es-es/foto/mujer-de-pie-mientras-lleva-portatil-1181354/">
+                    </div>
                     <p>Para tener un sitio web en internet, se requiere un conjunto de habilidades y tecnologías que
                         permitan hacerlo accesible desde la web. Esto incluye servicios y herramientas como los DNS,
                         nombres de dominio, un servidor web entre otros.
@@ -167,7 +169,7 @@
                         comentarios y todo lo que quieras mostrarle al mundo por medio de tu sitio web.
                     </p>
                     <h3 class="mb-4">Nuestra propuesta</h3>
-                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/blog-2.jpg" alt="Image">
+                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/blog-3.jpg" alt="Image" title="Foto de PhotoMIX Company: https://www.pexels.com/es-es/foto/persona-que-usa-un-telefono-inteligente-en-blanco-y-negro-y-que-tiene-una-tarjeta-azul-230544/">
                     <p>En Noho Digital, entendemos que el costo puede ser un factor importante a la hora de crear un
                         sitio web. Por eso, ofrecemos sitios web básicos que utilizan herramientas de bajo costo que
                         permitan minimizar los gastos de mantenimiento. Trabajamos contigo para crear un sitio web
@@ -282,7 +284,7 @@
 
 
                 <!-- Image Start -->
-                <div class="border p-3 mb-5">
+                <div class="border p-3 mb-5 d-none">
                     <img src="img/blog-1.jpg" alt="" class="img-fluid">
                 </div>
                 <!-- Image End -->
