actualizar footer productos

--- a/productos.html
+++ b/productos.html
@@ -336,19 +336,19 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="index.html"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Inicio</a>
-                    <a class="text-white mb-2" href="https://noho.digital#pointtoabout"><i
+                    <a class="text-white mb-2" href="#pointtoabout"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Sobre nosotros</a>
-                    <a class="text-white mb-2" href="https://noho.digital#pointtoservices"><i
+                    <a class="text-white mb-2" href="#pointtoservices"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Servicios</a>
-                    <a class="text-white mb-2" href="https://noho.digital/productos"><i
-                            class="fa fa-angle-right text-primary-highlight mr-2"></i>Productos</a>
+                            <a class="text-white mb-2" href="https://noho.digital/productos"><i
+                                class="fa fa-angle-right text-primary-highlight mr-2"></i>Productos</a>
                     <a class="text-white mb-2 d-none" href="#pricing"><i
                             class="fa fa-angle-right text-primary-highlight mr-2"></i>Precios</a>
                     <a class="text-white d-none" href="#"><i
                             class="fa fa-angle-right text-primary mr-2"></i>Contáctanos</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 mb-5">
+            <div class="col-lg-3 col-md-6 mb-5 d-none">
                 <h5 class="font-weight-bold text-primary-highlight mb-4">
                     Links de interes
                 </h5>
@@ -376,8 +376,8 @@
                     <i class="fa fa-map-marker-alt text-primary-highlight mr-2"></i>Medellín, Antioquia, Colombia
                 </p>
                 <p>
-                    <i class="fa fa-phone-alt text-primary-highlight mr-2"></i>+57 3205822261 <br /> &nbsp;
-                    &nbsp;&nbsp;&nbsp; +57 310 8961229
+                    <i class="fa fa-phone-alt text-primary-highlight mr-2"></i><a
+                        style=" text-decoration: none; color: white;" href="tel:+573239285414">+57 323 9285414</a>
                 </p>
                 <p>
                     <i class="fa fa-envelope text-primary-highlight mr-2"></i><a href="mailto:info@noho.digital"
