--- a/productos.html
+++ b/productos.html
@@ -182,7 +182,7 @@
 
 
                 <!-- Comment Form Start -->
-                <div class="border p-5">
+                <div class="border p-5 d-none">
                     <h3 class="font-weight-bold mb-4">Dejanos un comentario</h3>
                     <form>
                         <div class="form-group">
