--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 Creative Agency
                             </h5>
                             <h1 class="display-3 text-white mb-md-4">
-                                Aumente el potencial de tu marca con Noho Digital
+                                Aumenta el potencial de tu marca con Noho Digital
                             </h1>
                             <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2 d-none">Learn
                                 More</a>
