--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                         </div>
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/SquarePic_20230315_16243259.jpg" alt="" />
+                                <img class="img-fluid w-100" src="img/Cristian_3.png" alt="" />
                                 <div
                                     class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
