--- a/index.html
+++ b/index.html
@@ -497,30 +497,7 @@
                     <div class="owl-carousel team-carousel">
                         <div class="team-item">
                             <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/andres2.jpg" alt="" />
-                                <div
-                                    class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
-                                    <div class="d-flex align-items-center justify-content-start">
-                                        <a class="d-none btn btn-outline-secondary rounded-circle text-center mr-2 px-0"
-                                            style="width: 38px; height: 38px" href="#"><i
-                                                class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0"
-                                            style="width: 38px; height: 38px" href="#"><i
-                                                class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0"
-                                            style="width: 38px; height: 38px" href="https://www.linkedin.com/in/afruiz/"
-                                            target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="border border-top-0 text-center" style="padding: 30px">
-                                <h5 class="font-weight-bold">Andrés Ruiz</h5>
-                                <span>Co-founder</span>
-                            </div>
-                        </div>
-                        <div class="team-item">
-                            <div class="position-relative">
-                                <img class="img-fluid w-100" src="img/Cristian_3.png" alt="" />
+                                <img class="img-fluid w-100" src="img/Cristian_4.jpg" alt="" />
                                 <div
                                     class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
                                     <div class="d-flex align-items-center justify-content-start">
@@ -539,10 +516,34 @@
                                 </div>
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px">
-                                <h5 class="font-weight-bold">Cristian Lemus</h5>
+                                <h5 class="font-weight-bold">Cristian David Lemus Calderón</h5>
+                                <span>CEO & Co-founder</span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/andres2.jpg" alt="" />
+                                <div
+                                    class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="d-none btn btn-outline-secondary rounded-circle text-center mr-2 px-0"
+                                            style="width: 38px; height: 38px" href="#"><i
+                                                class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0"
+                                            style="width: 38px; height: 38px" href="#"><i
+                                                class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0"
+                                            style="width: 38px; height: 38px" href="https://www.linkedin.com/in/afruiz/"
+                                            target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px">
+                                <h5 class="font-weight-bold">Andrés Felipe Ruiz Tabares</h5>
                                 <span>Co-founder</span>
                             </div>
                         </div>
+                        
                         <!-- <div class="team-item">
                             <div class="position-relative">
                                 <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
